--- a/app.css
+++ b/app.css
@@ -1,5 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,500');
 
 :root {
     --backgroundColor: #fff;
@@ -102,3 +101,4 @@ a#tweet-quote {
     color: #333; /* Ändert die Farbe des Links */
 }
 
+/* testing github upload */
